Fixed spacing for the browse page and fixed some spacing issues on the publication page.

--- a/assets/styles/pubswh/pubs_base.scss
+++ b/assets/styles/pubswh/pubs_base.scss
@@ -194,11 +194,6 @@ $fa-font-path: "./fonts" !default;
     }
   }
   ul {
-    @include unstyled-list;
-    li {
-      a {
-      }
-    }
   }
 }
 
